[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/textures/HomeButton.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/icons/help.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/icons/search.png" type="Texture" id=3]
[ext_resource path="res://Lab/HomeButton3.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/textures/icons/right_arrow.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/icons/book.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/icons/add.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/icons/basket.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/icons/gear.png" type="Texture" id=9]
[ext_resource path="res://assets/themes/PanelStyleBoxFlat.tres" type="StyleBox" id=10]
[ext_resource path="res://assets/fonts/PT-BoldItalic_16.tres" type="DynamicFont" id=11]
[ext_resource path="res://src/interfaces/Items/Book.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/scenes/Home.gd" type="Script" id=15]
[ext_resource path="res://assets/fonts/PT-Bold_16.tres" type="DynamicFont" id=28]

[sub_resource type="StyleBoxTexture" id=1]
content_margin_right = 0.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 70, 70 )
modulate_color = Color( 0.135864, 0.156796, 0.207031, 1 )

[sub_resource type="StyleBoxTexture" id=2]
content_margin_right = 0.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 70, 70 )
modulate_color = Color( 0.156863, 0.180392, 0.239216, 1 )

[sub_resource type="StyleBoxTexture" id=3]
content_margin_right = 0.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 70, 70 )
modulate_color = Color( 0.12549, 0.145098, 0.192157, 1 )

[sub_resource type="StyleBoxLine" id=4]
color = Color( 0.0859833, 0.100905, 0.136719, 1 )
thickness = 3

[sub_resource type="StyleBoxLine" id=6]
color = Color( 0.443137, 0.47451, 0.54902, 0.85098 )
grow_begin = -3.0
grow_end = -3.0
thickness = 2
vertical = true

[node name="Home" type="Control"]
anchor_left = 0.036
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -69.12
margin_top = -54.0
script = ExtResource( 15 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.231373, 0.309804, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBar" type="MarginContainer" parent="ColorRect/HBoxContainer"]
margin_right = 148.0
margin_bottom = 1080.0
custom_constants/margin_right = 40
custom_constants/margin_top = 64
custom_constants/margin_left = 44
custom_constants/margin_bottom = 45

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer/LeftBar"]
margin_left = 44.0
margin_top = 64.0
margin_right = 108.0
margin_bottom = 1035.0

[node name="Begin" type="VBoxContainer" parent="ColorRect/HBoxContainer/LeftBar/VBoxContainer"]
margin_right = 64.0
margin_bottom = 449.0
size_flags_vertical = 3
custom_constants/separation = 8

[node name="HomeButton" type="Button" parent="ColorRect/HBoxContainer/LeftBar/VBoxContainer/Begin"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/HBoxContainer/LeftBar/VBoxContainer/Begin/HomeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/HBoxContainer/LeftBar/VBoxContainer/Begin/HomeButton/CenterContainer"]
margin_left = 18.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Center" type="VBoxContainer" parent="ColorRect/HBoxContainer/LeftBar/VBoxContainer"]
margin_top = 453.0
margin_right = 64.0
margin_bottom = 517.0

[node name="HomeButton3" parent="ColorRect/HBoxContainer/LeftBar/VBoxContainer/Center" instance=ExtResource( 4 )]

[node name="End" type="VBoxContainer" parent="ColorRect/HBoxContainer/LeftBar/VBoxContainer"]
margin_top = 521.0
margin_right = 64.0
margin_bottom = 971.0
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 2

[node name="Page" type="MarginContainer" parent="ColorRect/HBoxContainer"]
margin_left = 152.0
margin_right = 1768.0
margin_bottom = 1080.0
size_flags_horizontal = 3
custom_constants/margin_top = 64
custom_constants/margin_bottom = 77

[node name="RecipesBook" type="HBoxContainer" parent="ColorRect/HBoxContainer/Page"]
margin_top = 64.0
margin_right = 1616.0
margin_bottom = 1003.0

[node name="Left" type="Panel" parent="ColorRect/HBoxContainer/Page/RecipesBook"]
margin_right = 802.0
margin_bottom = 939.0
rect_clip_content = true
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/HBoxContainer/Page/RecipesBook/Left"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
custom_constants/margin_right = 28
custom_constants/margin_top = 48
custom_constants/margin_left = 28
custom_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer/Page/RecipesBook/Left/MarginContainer"]
margin_left = 28.0
margin_top = 48.0
margin_right = 774.0
margin_bottom = 933.0
rect_clip_content = true
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="ColorRect/HBoxContainer/Page/RecipesBook/Left/MarginContainer/VBoxContainer"]
margin_right = 746.0
margin_bottom = 4.0
custom_styles/separator = SubResource( 4 )

[node name="LeftContainer" type="GridContainer" parent="ColorRect/HBoxContainer/Page/RecipesBook/Left/MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 746.0
margin_bottom = 839.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 14

[node name="Pagination" type="Label" parent="ColorRect/HBoxContainer/Page/RecipesBook/Left/MarginContainer/VBoxContainer"]
margin_top = 855.0
margin_right = 746.0
margin_bottom = 885.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 11 )
text = "- 1 -"
align = 1

[node name="VSeparator" type="VSeparator" parent="ColorRect/HBoxContainer/Page/RecipesBook"]
margin_left = 806.0
margin_right = 809.0
margin_bottom = 939.0
custom_constants/separation = 3
custom_styles/separator = SubResource( 6 )

[node name="Right" type="Panel" parent="ColorRect/HBoxContainer/Page/RecipesBook"]
margin_left = 813.0
margin_right = 1616.0
margin_bottom = 939.0
rect_clip_content = true
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/HBoxContainer/Page/RecipesBook/Right"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
custom_constants/margin_right = 28
custom_constants/margin_top = 48
custom_constants/margin_left = 28
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer/Page/RecipesBook/Right/MarginContainer"]
margin_left = 28.0
margin_top = 48.0
margin_right = 775.0
margin_bottom = 933.0
rect_clip_content = true
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="ColorRect/HBoxContainer/Page/RecipesBook/Right/MarginContainer/VBoxContainer"]
margin_right = 747.0
margin_bottom = 4.0
custom_styles/separator = SubResource( 4 )

[node name="RightContainer" type="GridContainer" parent="ColorRect/HBoxContainer/Page/RecipesBook/Right/MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 747.0
margin_bottom = 839.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 14

[node name="Pagination" type="Label" parent="ColorRect/HBoxContainer/Page/RecipesBook/Right/MarginContainer/VBoxContainer"]
margin_top = 855.0
margin_right = 747.0
margin_bottom = 885.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 11 )
text = "- 1 -"
align = 1

[node name="RightBar" type="MarginContainer" parent="ColorRect/HBoxContainer"]
margin_left = 1772.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 44
custom_constants/margin_top = 64
custom_constants/margin_left = 40
custom_constants/margin_bottom = 45

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/HBoxContainer/RightBar"]
margin_left = 40.0
margin_top = 64.0
margin_right = 104.0
margin_bottom = 1035.0

[node name="Begin" type="VBoxContainer" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2"]
margin_right = 64.0
margin_bottom = 449.0
size_flags_vertical = 3
custom_constants/separation = 8

[node name="HomeButton" type="Button" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2/Begin"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2/Begin/HomeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2/Begin/HomeButton/CenterContainer"]
modulate = Color( 0.901961, 0.905882, 0.92549, 1 )
margin_left = 18.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="Center" type="VBoxContainer" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2"]
margin_top = 453.0
margin_right = 64.0
margin_bottom = 517.0

[node name="HomeButton3" type="Button" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2/Center"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2/Center/HomeButton3"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2/Center/HomeButton3/CenterContainer"]
modulate = Color( 0.901961, 0.905882, 0.92549, 1 )
margin_left = 18.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="End" type="VBoxContainer" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2"]
margin_top = 521.0
margin_right = 64.0
margin_bottom = 971.0
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 2

[node name="HomeButton4" type="Button" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2/End"]
margin_top = 314.0
margin_right = 64.0
margin_bottom = 378.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2/End/HomeButton4"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2/End/HomeButton4/CenterContainer"]
modulate = Color( 0.901961, 0.905882, 0.92549, 1 )
margin_left = 18.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="HomeButton5" type="Button" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2/End"]
margin_top = 386.0
margin_right = 64.0
margin_bottom = 450.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2/End/HomeButton5"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/HBoxContainer/RightBar/VBoxContainer2/End/HomeButton5/CenterContainer"]
modulate = Color( 0.901961, 0.905882, 0.92549, 1 )
margin_left = 18.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 44
custom_constants/margin_top = 64
custom_constants/margin_left = 44
custom_constants/margin_bottom = 78

[node name="Book" parent="ColorRect/MarginContainer" instance=ExtResource( 12 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_top = 64.0
margin_right = 1876.0
margin_bottom = 1002.0

[node name="Buttons" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 44
custom_constants/margin_top = 64
custom_constants/margin_left = 44
custom_constants/margin_bottom = 48

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/Buttons"]
margin_left = 44.0
margin_top = 64.0
margin_right = 1876.0
margin_bottom = 1032.0
mouse_filter = 2

[node name="Left" type="VBoxContainer" parent="ColorRect/Buttons/HBoxContainer"]
margin_right = 64.0
margin_bottom = 968.0
mouse_filter = 2
size_flags_horizontal = 2

[node name="HomeButton2" type="Button" parent="ColorRect/Buttons/HBoxContainer/Left"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/Buttons/HBoxContainer/Left/HomeButton2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/Buttons/HBoxContainer/Left/HomeButton2/CenterContainer"]
margin_left = 18.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="OptionsButton2" type="Button" parent="ColorRect/Buttons/HBoxContainer/Left"]
margin_top = 836.0
margin_right = 64.0
margin_bottom = 900.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 10
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/Buttons/HBoxContainer/Left/OptionsButton2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/Buttons/HBoxContainer/Left/OptionsButton2/CenterContainer"]
modulate = Color( 0.901961, 0.905882, 0.92549, 1 )
margin_left = 18.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="FeedbackButton2" type="Button" parent="ColorRect/Buttons/HBoxContainer/Left"]
margin_top = 904.0
margin_right = 64.0
margin_bottom = 968.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 8
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/Buttons/HBoxContainer/Left/FeedbackButton2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/Buttons/HBoxContainer/Left/FeedbackButton2/CenterContainer"]
modulate = Color( 0.901961, 0.905882, 0.92549, 1 )
margin_left = 18.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Right" type="VBoxContainer" parent="ColorRect/Buttons/HBoxContainer"]
margin_left = 1768.0
margin_right = 1832.0
margin_bottom = 968.0
mouse_filter = 2

[node name="BasketButton" type="Button" parent="ColorRect/Buttons/HBoxContainer/Right"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/Buttons/HBoxContainer/Right/BasketButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/Buttons/HBoxContainer/Right/BasketButton/CenterContainer"]
modulate = Color( 0.901961, 0.905882, 0.92549, 1 )
margin_left = 18.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="MyRecipeButton" type="Button" parent="ColorRect/Buttons/HBoxContainer/Right"]
margin_top = 836.0
margin_right = 64.0
margin_bottom = 900.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 10
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/Buttons/HBoxContainer/Right/MyRecipeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/Buttons/HBoxContainer/Right/MyRecipeButton/CenterContainer"]
modulate = Color( 0.901961, 0.905882, 0.92549, 1 )
margin_left = 18.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="AddRecipeButton" type="Button" parent="ColorRect/Buttons/HBoxContainer/Right"]
margin_top = 904.0
margin_right = 64.0
margin_bottom = 968.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/Buttons/HBoxContainer/Right/AddRecipeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/Buttons/HBoxContainer/Right/AddRecipeButton/CenterContainer"]
modulate = Color( 0.901961, 0.905882, 0.92549, 1 )
margin_left = 18.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 157.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 28 )
text = "Bienvenue PSEUDO"

[connection signal="pressed" from="ColorRect/HBoxContainer/RightBar/VBoxContainer2/End/HomeButton5" to="." method="_on_HomeButton5_pressed"]
[connection signal="recipe_pressed" from="ColorRect/MarginContainer/Book" to="." method="_on_recipe_opened"]
[connection signal="pressed" from="ColorRect/Buttons/HBoxContainer/Right/MyRecipeButton" to="." method="_on_MyRecipeButton_pressed"]
[connection signal="pressed" from="ColorRect/Buttons/HBoxContainer/Right/AddRecipeButton" to="." method="_on_AddRecipeButton_pressed"]
